--- a/Scala.ipynb
+++ b/Scala.ipynb
@@ -242,7 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def product[A, B, C, D](f: A => C, g: A => D): A => (C, D) = \n",
+    "def product[A, B, C](f: A => B, g: A => C): A => (B, C) = \n",
     "    (a: A) => (f(a), g(a))"
    ]
   },
@@ -253,16 +253,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def conditional_product[A, B, C, D](\n",
-    "    f: A => C, \n",
-    "    g: A => D): \n",
-    "       A => (C, D) = \n",
+    "def conditional_product[A, B, C](\n",
+    "    f: A => B, \n",
+    "    g: A => C): \n",
+    "       A => (B, C) = \n",
     "  { a: A => \n",
-    "      val c: C = f(a)\n",
-    "      val d: D = g(a)\n",
-    "      (c, d) : (C, D)\n",
-    "  } : (A => (C, D))"
+    "      val b: B = f(a)\n",
+    "      val c: C = g(a)\n",
+    "      (b, c) : (B, C)\n",
+    "  } : (A => (B, C))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3439bc1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
