--- a/templates/Scala.ipynb
+++ b/templates/Scala.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "id": "69131363",
    "metadata": {},
    "outputs": [],
@@ -441,23 +441,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7d87169e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "defined \u001b[32mfunction\u001b[39m \u001b[36mproduct\u001b[39m"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def product[A, B, C, D](f: A => C, g: A => D): A => (C, D) = \n",
+    "def product[A, B, C](f: A => B, g: A => C): A => (B, C) = \n",
     "    ???"
    ]
   },
